--- a/Client/src/components/EmployeesDetails/EmployeesDetails.css
+++ b/Client/src/components/EmployeesDetails/EmployeesDetails.css
@@ -5,48 +5,13 @@
 }
 .add-input{
     display: flex;
-    /* justify-content: center; */
+ flex-wrap: wrap;
     align-items: center;
    gap: 10px;
 }
-.factory-details-form {
-    width: 100%;
-    margin: 20px auto;
-    padding: 20px;
-    background: #FFFFFF;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-}
 
-.email-tag {
-    display: inline-flex;
-    align-items: center;
-    gap: 5px;
-    padding: 5px 10px;
-    margin: 5px;
-    background-color: #007bff;
-    color: white;
-    border-radius: 20px;
-    cursor: default;
-}
-.t{
-margin-top: 10px;
-}
-.email-tag button {
-    background-color: #dc3545;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    cursor: pointer;
-    padding: 2px 6px;
-}
 
-input {
-    margin-left: 10px;
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
+
 
 .add-btn {
     border: none;
