--- a/Client/src/components/FactoryDetails/FactoryDetails.css
+++ b/Client/src/components/FactoryDetails/FactoryDetails.css
@@ -8,17 +8,10 @@
     border: 1px solid black;
     padding: 10px;
 }
-.factory-details-form {
-    width: 100%;
-    margin: 20px auto;
-    padding: 20px;
-    background: #FFFFFF;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-}
 
 .form-field {
     margin-bottom: 15px;
+    /* width: 100%; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -43,20 +36,8 @@
     outline: none;
 }
 
-.form-button-group {
-    display: flex;
-    justify-content: flex-start;
-    gap: 10px;
-}
 
-.form-button-group button {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s;
-}
+
 
 .update-button {
     background-color: #007bff;
