--- a/Client/src/components/FactorySetup/SetupFactory.css
+++ b/Client/src/components/FactorySetup/SetupFactory.css
@@ -3,6 +3,90 @@
   flex-direction: column;
   justify-content: space-around; /* Ensure content uses the full height */
   height: 100vh;
+  font-family:  '"Euclid Square", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif',;
+}
+.button-main-div{
+  margin-top: 10px;
+  padding: 8px;
+  /* border: 1px solid rgb(64, 50, 146); */
+}
+input {
+  margin-left: 10px;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  min-width: 22px
+}
+h3{
+  color: #007bff;
+  font-weight: 800;
+  font-size: 30px;
+}
+label{
+
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+.msg{
+  margin:  20px;
+  /* padding: 20px; */
+  border: 1px solid #ccc;
+}
+.selected-array {
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  border: 1px solid rgb(64, 50, 146);
+  margin:  10px 0 10px 0;
+  gap: 10px;
+}
+.first-ses{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  border: 1px solid rgb(64, 50, 146);
+  padding: 20px;
+  margin:  10px 0 10px 0;
+  gap: 10px;
+}
+
+.factory-details-form  {
+  width: 100%;
+  margin: 20px auto;
+  padding: 20px;
+  background: #FFFFFF;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  display: flex;
+  flex-direction: column;
+}
+
+.error-message {
+  color: #dc3545;
+}
+.inputx{
+display: flex;
+flex-wrap: wrap;
+
+}
+.form-div{
+  width: 100%;
+}
+.form-button-group {
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+}
+
+.form-button-group button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
 }
 
 
@@ -42,4 +126,26 @@
   width: 100px;
   background-color: #3E6EF4; /* Red background */
   color: white; /* White text */
+}
+
+.div-like-btn{
+  display: inline-flex;
+  align-items: center;
+  gap: 5px;
+  padding: 5px 10px;
+  margin: 5px;
+  background-color: #007bff;
+  color: white;
+  border-radius: 20px;
+  cursor: default;
+
+}
+
+.div-like-btn button {
+  background-color: #dc3545;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  padding: 2px 6px;
 }
