--- a/Client/src/components/EmployeesDetails/EmployeesDetails.css
+++ b/Client/src/components/EmployeesDetails/EmployeesDetails.css
@@ -1,32 +1,39 @@
-.setup-div{
-    width: 100%;
-    height: 100%;
-    border: 1px solid black;
-}
-.add-input{
-    display: flex;
- flex-wrap: wrap;
-    align-items: center;
-   gap: 10px;
-}
 
-
-
-
-.add-btn {
+  
+  .add-btn {
+    padding: 10px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    padding: 4px 10px;
     font-size: 16px;
-    
-    background-color: #fcfffc;
-    border: 1px solid rgb(123, 123, 248);
-    transition: background-color 0.3s;
-}
+    transition: background-color 0.3s, color 0.3s, transform 0.2s, box-shadow 0.2s;
+    font-weight: bold;
+    text-transform: uppercase;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    background-color: #007bff; /* Primary color, adjust as needed */
+    color: white; /* Text color */
+  }
+  
+  .add-btn:hover {
+    background-color: #0056b3; /* A darker shade for hover, adjust as needed */
+    color: #ffffff; /* Keep text color white for readability */
+    transform: translateY(-2px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  }
+  .lab-in-btn {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px; /* Adjust as needed */
+  }
 
-    .add-btn:hover{
-        background-color: #62bb65;
-        color: #fcfffc;
-        border: 1px solid rgb(119, 146, 122);
-    }
+  
+  .email-input {
+    flex-grow: 1; /* Allows the input to take up available space */
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+
+  
