--- a/Client/src/components/Cards/DeptSetup/DeptCardPages/DeptDetailsView.css
+++ b/Client/src/components/Cards/DeptSetup/DeptCardPages/DeptDetailsView.css
@@ -8,6 +8,7 @@
     -ms-user-select: none;
     user-select: none;
     margin-bottom: 20px; /* Space between department cards */
+    background-color: #f8f9fa;
   }
   
   .dept-view-container:hover {
