--- a/Client/src/components/Cards/DeptSetup/DeptCard.css
+++ b/Client/src/components/Cards/DeptSetup/DeptCard.css
@@ -7,6 +7,8 @@
   margin: 10px 0;
   background-color: #FFFF;
   transition: all 0.3s ease;
+  /* height: 500px; Adjust based on your needs */
+  /* overflow-y: auto; */
 }
 
 .dept-header {
