--- a/Client/src/components/Cards/DeptSetup/DeptSetupCard.css
+++ b/Client/src/components/Cards/DeptSetup/DeptSetupCard.css
@@ -1,4 +1,4 @@
-.dept-card {
+/* .dept-card {
   display: flex;
   flex-direction: column;
   border: 1px solid #ddd;
@@ -7,7 +7,7 @@
   margin: 10px 0;
   background-color: #FFFF;
   transition: all 0.3s ease;
-}
+} */
 
 .dept-header {
   display: flex;
@@ -41,4 +41,5 @@
   flex-direction: column;
   justify-content: space-around; 
   width: 100%;
+  /* overflow-y: scroll; */
 }
