--- a/Client/src/components/FactoryDetails/FactoryDetails.css
+++ b/Client/src/components/FactoryDetails/FactoryDetails.css
@@ -1,22 +1,54 @@
-.setup-div {
+.card-div{
   width: 100%;
   height: 100%;
   padding: 10px;
+  border: 1px solid red;
+  max-height: 100%; /* Ensures the component doesn't grow beyond the parent's height */
+  overflow-y: auto
 }
 
-.factory-details-form {
+.card-name{
+  border: 1px solid rgb(0, 0, 0);
+}
+
+.crad-msg{
+    border: 1px solid rgb(0, 0, 0);
+}
+
+.card-content {
   margin: 20px auto;
   padding: 20px;
+  overflow-y: hidden;
+  border: 1px solid rgb(0, 0, 0);
   background: #ffffff;
   border-radius: 8px;
+  /* width: 65%; */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
 }
 
-.first-ses, .form-div {
+.card-header {
+  display: flex;
+  justify-content: flex-start;
+  font-size: 22px;
+  margin-bottom: 40px;
+  width: 100%;
+  border: 1px solid rgb(0, 0, 0);
+}
+
+.card-sec{
+  border: 1px solid rgb(0, 0, 0);
+}
+
+.section-name{
+  border: 1px solid rgb(0, 0, 0);
+}
+ .form-div {
   display: flex;
   flex-direction: column;
+  gap: 10px;
+  border: 1px solid rgb(201, 169, 252);
 }
 
 .form-field {
@@ -25,21 +57,31 @@
   justify-content: flex-start; /* Align items to the start */
   gap: 10px; /* Adjust the gap as needed */
   margin-bottom: 15px;
+  /* border: 1px solid rgb(0, 0, 0); */
 }
-
+.input-rapper{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 10px; /* Adjust the gap as needed */
+}
 .email-label {
-  flex-shrink: 0; /* Prevent the label from shrinking */
-  margin-right: 10px; /* Adjust spacing between label and input */
+  /* flex-shrink: 0; Prevent the label from shrinking */
+
   font-weight: bold;
   font-size: 16px;
   color: #007bff;
   white-space: nowrap; /* Keep the label text on one line */
 }
-
+.fix-left{
+  border: 1px solid #ccc;
+  display: flex;
+  justify-content: flex-start;
+}
 .email-input {
   flex-grow: 0; /* Do not allow the input to grow */
   display: inline-block; /* Adjust as necessary based on editMode */
-  margin-right: auto; /* Push everything else to the right, closer to label */
+  /* margin-right: auto; Push everything else to the right, closer to label */
   max-width: 300px; /* Maximum width for the input */
   padding: 10px;
   border: 1px solid #ccc;
@@ -97,8 +139,9 @@
   background-color: #dc3545; /* Clear/Danger color */
 }
 
+
 .clear-button:hover {
-  background-color: #c12e2a; /* Darker red for hover */
+  background-color: #f05011;
 }
 
 /* Adjust hover effects for all buttons */
