--- a/Client/src/components/FactoryDetails/FactoryDetails.css
+++ b/Client/src/components/FactoryDetails/FactoryDetails.css
@@ -7,22 +7,22 @@
   overflow-y: auto
 }
 
-.card-name{
+/* .card-name{
   border: 1px solid rgb(0, 0, 0);
 }
 
 .crad-msg{
     border: 1px solid rgb(0, 0, 0);
-}
+} */
 
 .card-content {
   margin: 20px auto;
-  padding: 20px;
+  padding: 20px ;
   overflow-y: hidden;
-  border: 1px solid rgb(0, 0, 0);
+  /* border: 1px solid rgb(0, 0, 0); */
   background: #ffffff;
   border-radius: 8px;
-  /* width: 65%; */
+  max-width: 40vw;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
@@ -37,13 +37,13 @@
   border: 1px solid rgb(0, 0, 0);
 }
 
-.card-sec{
+/* .card-sec{
   border: 1px solid rgb(0, 0, 0);
 }
 
 .section-name{
   border: 1px solid rgb(0, 0, 0);
-}
+} */
  .form-div {
   display: flex;
   flex-direction: column;
