--- a/Client/src/components/DynamicForm/DynamicForm.css
+++ b/Client/src/components/DynamicForm/DynamicForm.css
@@ -16,8 +16,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
   width: 100%;
+  height: 100%;
 }
 
 .form-label {
@@ -26,20 +27,18 @@
   color: rgba(23, 24, 35, 0.75);
   font-family: "Euclid Square", sans-serif;
   width: 100%;
-  /* text-align: left; */
+
 }
 
 .input-group {
   display: flex;
-  padding: 2px;
   align-items: center;
   width: 100%;
-padding-left: 2px;
 }
 
 .input {
   width: 100%;
-  padding: 8px 12px;
+  padding: 8px 6px;
   border: 1px solid #ccc;
   border-radius: 8px;
   font-family: "Euclid Square", sans-serif;
@@ -53,7 +52,7 @@ padding-left: 2px;
   font-weight: 500;
   font-size: 14px;
   line-height: 22px;
-  padding: 10px 12px;
+  padding: 10px 0px;
   border-radius: 8px;
   margin-top: 20px;
   background-color: #3e6ef4;
