--- a/Client/src/components/Nav/NavUser.css
+++ b/Client/src/components/Nav/NavUser.css
@@ -14,11 +14,11 @@
   
   .avatar {
     /* Style your avatar here */
-    width: 26px;
-    height: 26px;
+    width: 20px;
+    height: 20px;
     background-color: #ccc; /* Placeholder color, use an img tag or background-image */
     border-radius: 50%;
-    margin-right: 5px;
+    margin-right:10px;
   }
   .line{
     height: 1px;
@@ -28,6 +28,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-weight: 600;
   }
   
  
