--- a/Client/src/components/UserManu/UserMenu.css
+++ b/Client/src/components/UserManu/UserMenu.css
@@ -1,61 +1,74 @@
-/* UserMenu.css */
 .user-menu {
-    position: relative;
-    z-index: 1000;
-  }
-  
-  .user-button {
-    border-radius: 20px; /* Adjust as needed for rounded borders */
-    cursor: pointer;
-    width: 50px;
-    height: 30px;
-    background-color: white;
-    border: none;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-  }
-  .user-button:hover {
- background-color: #ccc;
-  }
-  
+  position: relative;
+  z-index: 1000;
+}
+
+.user-button {
+  border-radius: 20px;
+  cursor: pointer;
+  width: 50px;
+  margin-left: 4px;
+  height: 30px;
+  background-color: white;
+  border: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.user-button:hover {
+  background-color: #efeaea;
+}
+
+.menu-dropdown {
+  position: absolute;
+  top: 50px;
+  left: 0;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  width: 200px;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  z-index: 1000;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Use a legible font */
+  color: #333; /* Dark text for readability */
+}
+
+.menu-section {
+  padding: 10px;
+  border-bottom: 1px solid #eee; /* Visually separate sections */
+}
+
+.menu-section:last-child {
+  border-bottom: none; /* Remove border from the last section */
+}
+
+.menu-item {
+  display: block; /* Change from flex to block for better control */
+  width: 100%;
+  padding: 8px;
+  text-align: left; /* Align text to the left */
+  color: #333; /* Dark text for better readability */
+  text-decoration: none; /* Remove underline from links if applied */
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.menu-item:hover {
+  background-color: #f0f0f0; /* Subtle hover effect */
+}
+
+.icon, .icon2 {
+  width: 20px;
+  height: 20px;
+  vertical-align: middle; /* Align icons with the text vertically */
+}
+
+/* Media query to adjust dropdown position on smaller screens */
+@media (max-width: 600px) {
   .menu-dropdown {
-    position: absolute;
-    top: 50px; /* Adjust based on your layout */
-    left: 0;
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    width: 200px; /* Adjust as needed */
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    z-index: 1000;
+    left: auto; /* Override left position */
+    right: 0; /* Position to the right */
   }
-  
-  .menu-section {
-    padding: 10px;
-  }
-  
-  .menu-item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    padding: 8px;
-  }
-  
-  .menu-item:hover {
-    background-color: #f0f0f0;
-  }
-  
-  .icon {
-    width: 20px;
-    height: 20px;
-  }
-  .icon2 {
-    width: 15px;
-    height: 15px;
-  }
-  
+}
