--- a/Client/src/components/GenericFactoryForm/GenericForm.css
+++ b/Client/src/components/GenericFactoryForm/GenericForm.css
@@ -1,7 +1,7 @@
 /* GenericFactoryForm.css */
 
 .generic-form {
-    width: 630px;
+    width: 100%;
     margin: 20px auto;
     padding: 20px;
     background: #FFFF;
