--- a/Client/src/Pages/Login/login.css
+++ b/Client/src/Pages/Login/login.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   background-color: #FFFFFF; /* Updated as requested */
-  height: 100%;
+  max-height: 100vh;
 }
 
 /* Header and Main Content Styling */
@@ -23,7 +23,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 32px 0 ;
+
 }
 
 .main {
@@ -31,6 +31,10 @@
   width: 100%;
   align-items: center;
   justify-content: center;
+}
+.form{
+  height: 100%;
+    /* border: 1px solid blue; */
 }
 
 /* Subform Styling */
@@ -40,7 +44,7 @@
   border-radius: 8px;
   padding: 2px 24px 24px 24px;
   width: 335px;
-  /* height: ; */
+  /* height: 100%; */
 }
 
 /* Typography */
